@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Tst06RunAction.hh,v 1.1 1999-01-08 16:35:05 gunter Exp $
+// $Id: Tst06RunAction.hh,v 1.2 1999-04-17 06:56:24 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -21,11 +21,11 @@ class Tst06RunAction : public G4UserRunAction
 {
   public:
     Tst06RunAction();
-    ~Tst06RunAction();
+    virtual ~Tst06RunAction();
 
   public:
-    void BeginOfRunAction(G4Run* aRun);
-    void EndOfRunAction(G4Run* aRun);
+    virtual void BeginOfRunAction(const G4Run* aRun);
+    virtual void EndOfRunAction(const G4Run* aRun);
 
   private:
     G4int runIDcounter;
