@@ -18,10 +18,9 @@ Tst06SteppingAction::Tst06SteppingAction()
 Tst06SteppingAction::~Tst06SteppingAction()
 {;}
 
-void Tst06SteppingAction::UserSteppingAction()
+void Tst06SteppingAction::UserSteppingAction(const G4Step * theStep)
 {
-  G4SteppingManager * SM = GetOmnipotentSteppingManager();
-  G4Step * theStep = SM->GetStep();
+  G4SteppingManager * SM = fpSteppingManager;
   G4Track * theTrack = theStep->GetTrack();
 
   // check if it is alive
@@ -75,4 +74,22 @@ void Tst06SteppingAction::UserSteppingAction()
        }
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
