@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-08 16:35:03 gunter Exp $
+$Id: History,v 1.2 1999-04-17 06:56:19 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,10 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+17 Apr., 1999 H.Kurashige 
+- Modify SetCuts() and ConstructParticle() in Tst06PhysicsList
+- Modify BeginOfRunAction() and EndOfRunAction() in Tst06RunAction
+- Modify UserSteppingAction() in Tst06SteppingAction
 
 June 27, 98 G. Cosmo
 - Created.
